--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
