--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-konva": "^18.2.8",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "react-webcam": "^7.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
