--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "konva": "^9.0.2",
+    "react-bootstrap": "^2.7.4",
     "react-konva": "^18.2.8",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
