--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.2.9",
     "konva": "^9.0.2",
     "react-bootstrap": "^2.7.4",
+    "react-intl": "^6.4.2",
     "react-konva": "^18.2.8",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
@@ -30,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "extract": "formatjs extract src/**/**/*.{ts,tsx,jsx,js} --ignore='**/*.d.ts' --out-file ./extracted/en.json"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@formatjs/cli": "^6.1.1"
   }
 }
